# telegraph

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE  annotated.html  api.proto  can__interface_8hpp.html  classtelegen_1_1action.html  classtelegen_1_1action__handler.html  classtelegen_1_1group.html  classtelegen_1_1node.html  classtelegen_1_1publisher_1_1sub__impl.html  classtelegen_1_1publisher__base.html  classtelegen_1_1source.html  classtelegen_1_1subscription.html  classtelegen_1_1uart__interface.html  classtelegen_1_1value.html  classtelegen_1_1variable.html  classtelegraph_1_1adapter__base.html  classtelegraph_1_1config.html  classtelegraph_1_1connection.html  classtelegraph_1_1container.html  classtelegraph_1_1context.html  classtelegraph_1_1data__point.html  classtelegraph_1_1data__query.html  classtelegraph_1_1datapoint.html  classtelegraph_1_1decodebuf.html  classtelegraph_1_1device.html  classtelegraph_1_1dummy__device.html  classtelegraph_1_1encodebuf.html  classtelegraph_1_1group.html  classtelegraph_1_1local__component.html  classtelegraph_1_1local__namespace.html  classtelegraph_1_1missing__error.html  classtelegraph_1_1node.html  classtelegraph_1_1parse__error.html  classtelegraph_1_1profile.html  classtelegraph_1_1server_1_1remote.html  (+104 more)
.github/workflows/: docs.yml  main.yml  workflow.yml
api/: api.proto
apps/: example.conf  rpc-test.cpp  test.cpp
backend/: Cargo.toml
backend/.cargo/: config
backend/api-schema/: Cargo.toml
backend/api-schema/src/: api.rs  lib.rs  types.rs  value.rs
backend/cli-client/: Cargo.toml
backend/codegen/: Cargo.toml
backend/core/: Cargo.toml
backend/core/src/: assigned_can_ids.rs  assigned_perdos_ids.rs  devices.rs  display.rs  lib.rs  value.rs
backend/core/test/: AssignedCanIds.xml  AssignedPerDosIds.xml  rev5 Display.xml  rev5.xml
backend/percan/: Cargo.toml
backend/perdat2/: Cargo.toml
backend/perxml/: Cargo.toml
backend/server/: Cargo.toml  build.rs
backend/server/src/: backend.rs  errors.rs  graphql.rs  lib.rs  local.rs  main.rs  nodes.rs  types.rs  value.rs  wire.rs
backend/server/src/common/: mod.rs  namespace.rs  subscription.rs
backend/server/src/local/: dummy_device.rs  mod.rs
backend/tiresias/: package.json
backend/tiresias/src-tauri/: Cargo.toml  tauri.conf.json
backend/tiresias/src-tauri/src/: main.rs
cpp/: BUILD  CMakeLists.txt  Doxyfile  gentool.bzl
cpp/apps/: client-test.cpp  test.cpp
cpp/lib/per/: client.cpp  client.hpp  config.cpp  context.cpp  context.hpp  datapoint.hpp  errors.hpp  server.cpp  server.hpp  value.cpp  value.hpp
cpp/lib/per/nodes/: action.cpp  action.hpp  group.cpp  group.hpp  node.cpp  node.hpp  tree.cpp  tree.hpp  variable.cpp  variable.hpp
cpp/lib/per/utils/: hocon.cpp  json.cpp  json.hpp  promise.hpp  signal.hpp
cpp/lib/telegraph/: client.cpp  client.hpp  config.cpp  config.hpp  context.cpp  context.hpp  datapoint.hpp  errors.hpp  generator.cpp  generator.hpp  id_map.cpp  id_map.hpp  port.cpp  port.hpp  server.cpp  server.hpp  tree.cpp  tree.hpp  type.cpp  type.hpp  value.cpp  value.hpp
cpp/lib/telegraph/common/: adapter.cpp  adapter.hpp  collection.hpp  context.hpp  data.hpp  namespace.hpp  nodes.cpp  nodes.hpp  params.cpp  params.hpp  publisher.hpp  query.hpp  task.hpp  type.hpp  value.hpp
cpp/lib/telegraph/local/: container.cpp  container.hpp  context.cpp  context.hpp  crc.hpp  device.cpp  device.hpp  dummy_device.cpp  dummy_device.hpp  namespace.cpp  namespace.hpp  task.cpp  task.hpp  tmp_archive.cpp  tmp_archive.hpp
cpp/lib/telegraph/nodes/: action.cpp  action.hpp  group.cpp  group.hpp  node.cpp  node.hpp  stream.hpp  tree.cpp  tree.hpp  variable.cpp  variable.hpp
cpp/lib/telegraph/ns/: context.hpp  namespace.hpp  nodes.hpp  type.hpp  value.hpp
cpp/lib/telegraph/remote/: client.cpp  client.hpp  connection.cpp  connection.hpp  forwarder.cpp  forwarder.hpp  namespace.cpp  namespace.hpp  relay.cpp  relay.hpp  server.cpp  server.hpp
cpp/lib/telegraph/utils/: errors.hpp  hocon.cpp  hocon.hpp  info.cpp  info.hpp  io.hpp  io_fwd.hpp  json.cpp  json.hpp  json_fwd.hpp  serial_port.cpp  serial_port.hpp  signal.hpp  uuid.hpp
cpp/main/: client-test.cpp  client.cpp  device_test.cpp  dummy_client.cpp  dummy_server.cpp  example.conf  generate.cpp  server.cpp  test.cpp
cpp/main/server/: config.cpp  config.hpp  main.cpp  main.hpp  system.cpp  system.hpp
cpp/src/per/: client.cpp  client.hpp  config.hpp  context.hpp  datapoint.hpp  type.cpp  value.cpp  value.hpp
cpp/src/per/nodes/: group.cpp  group.hpp  node.cpp  tree.cpp  tree.hpp
cpp/src/per/utils/: dummy_source.cpp  hocon.hpp  signal.hpp
cpp/stm32/: BUILD  rules.bzl  test.cpp  tools.bzl
cpp/stm32/stdlib/: cinttypes
cpp/stm32/stdlib/c++/: cstddef  cstdint
cpp/stm32/stdlib/libc/: init.c  stdint.h
cpp/test/: example.conf  tree-test.cpp
docs/html/: adapter_8hpp.html  can__interface_8hpp.html  classstdext_1_1inplace__function.html  classstdext_1_1inplace__function_3_01R_07Args_8_8_8_08_00_01Capacity_00_01Alignment_01_4.html  classtelegen_1_1action__base.html  classtelegen_1_1basic__promise.html  classtelegen_1_1basic__promise__completer.html  classtelegen_1_1coroutine_1_1ref.html  classtelegen_1_1publisher.html  classtelegen_1_1publisher__scheduler.html  classtelegen_1_1sub.html  classtelegen_1_1variable__base.html  classtelegrah_1_1gen_1_1can__interface.html  classtelegraph_1_1action.html  (+83 more)
gui/: .babelrc  .gitignore  README.md  babel.config.js  build-server.js  index.html  install-binary.js  package-lock.json  package.json  vue.config.js  webpack.config.js
gui/src/: app.js  (+8 more)
js/: generate.mjs  index.mjs  package-lock.json  package.json  test-client.mjs  test-server.mjs
js-client/: index.mjs  package.json  test-client.mjs
js-core/: index.mjs  package.json
js-server/: index.mjs  package.json  server.mjs
proto/: BUILD  api.proto  common.proto  log.proto  stream.proto  uart.proto
python/: .gitignore  generate.sh  uart_tool.py  util.py
tools/: BUILD  deps.bzl  deps_extra.bzl  deps_stage1.bzl  deps_stage2.bzl  deps_stage3.bzl  doxygen.bzl  nanopb_gen.bzl
(+609 files in other folders)
