[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.22", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"]}
eyre = "0.6"
serde_path_to_error = "0.1"