[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = "^5.4.1"
quicli = "0.4"
structopt = "0.2"
perdat2 = { path = "../perdat2" }