[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
uuid = "0.8.2"
tokio = { version = "1", features = ["full"] }
tokio-serial = "^5.4.1"
tokio-socketcan = "0.3.1"
clap = "3.1.18"
clap-verbosity-flag = "1.0.0"
log = "0.4.17"
env_logger = "0.9.0"
api-schema = { path = "../api-schema" }
perxml = { path = "../perxml" }
futures-core = "0.3.21"
futures-lite = "1.12"
futures-util = "0.3"
async-graphql-warp = "3.0"
warp = "0.3"


[dependencies.async-graphql]
version = "3.0"
features = ["uuid"]