[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tokio-serial = "^5.4.1"
quicli = "0.4"
structopt = "0.2"
bytes = "1"
perdat2 = { path = "../perdat2" }
futures-util = "0.3"
per = {package = "core", path = "../core"}