[package]
name = "tiresias"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all"] }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tokio-serial = "^5.4.1"
bytes = "1"
perdat2 = { path = "../../perdat2" }
futures-util = "0.3"
per = {package = "core", path = "../../core"}
log = "0.4"
env_logger = "0.9"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
